# cargo-wrap-comments

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: main.rs
tests/: quiet_mode.rs  quiet_mode_tests.rs  rustfmt_discovery_tests.rs  stdin_tests.rs  verbose_tests.rs
